fix: modify  helpPage component

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 REACT_APP_API_URL= http://localhost:3003
 # REACT_APP_API_URL=http://45.13.324.230:3003
+
+REACT_APP_Service_ID=service_4wztpws
+REACT_APP_Template_ID=template_n26cvtl
+REACT_APP_Public_Key=UtUahtNZ12UxtU7AC
