--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.3.7",
+    "emailjs-com": "^3.2.0",
     "glightbox": "^3.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
