--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.3.7",
+    "socket.io-client": "^4.7.5",
     "emailjs-com": "^3.2.0",
     "glightbox": "^3.3.1",
     "moment": "^2.29.4",
@@ -38,6 +39,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.48",
+    "@types/socket.io-client": "^3.0.0",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-logger": "^3.0.13",
