--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "start:prod": "serve -s build -l 6000",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
